# almond

./: CMakeLists.txt  Makefile  game
game/: arena.c  arena.cpp  arena.h  array.h  game.c  game.cpp  geometry.c  geometry.cpp  geometry.h  gltf_loader.c  gltf_loader.cpp  gltf_loader.h  list.h  map.c  map.cpp  map.h  physics.cpp  physics.h  render_commands.c  render_commands.cpp  render_commands.h  shape.cpp  shape.h  shapes.c  shapes.cpp  shapes.h  string_view.h  texture.c  texture.cpp  texture.h
shaders/: frag.glsl  frag.spv  vert.glsl  vert.spv
src/: arena.h  arena_linux.c  file_watcher.cpp  file_watcher.h  geometry.c  geometry.h  logger.c  logger.cpp  logger.h  main.c  main.cpp  map.c  renderer.c  renderer.cpp  renderer.h
src/public/: almond.h  almond_math.h
